# postdoc

./: CMakeLists.txt  Doxyfile.local  Doxyfile.web  README.md  README.txt  doc.sh  index.html  libMeshConfig.cmake  params.json
cmake-modules/: FindPETSc.cmake
data/fem/examples/input/: example2.gmv
data/test_user_options/: test_user_options.cfg
data/v2m/input/: randvol_30.inr
doc/: _complex__3__subdomain__in__triangulation__3__to__vtk_8h.html  _complex__3__subdomain__in__triangulation__3__to__vtk_8h.js  _complex__3__subdomain__in__triangulation__3__to__vtk_8h__dep__incl.map  _complex__3__subdomain__in__triangulation__3__to__vtk_8h__dep__incl.md5  _complex__3__subdomain__in__triangulation__3__to__vtk_8h__incl.md5  annotated.html  annotated.js  class_slaughter_common_1_1_file_parts-members.html  class_slaughter_common_1_1_file_parts.html  class_slaughter_common_1_1_file_parts.js  class_slaughter_common_1_1_user_options-members.html  class_slaughter_common_1_1_user_options.html  class_slaughter_common_1_1_user_options.js  class_slaughter_f_e_m_1_1_energy_eq-members.html  class_slaughter_f_e_m_1_1_energy_eq.html  class_slaughter_f_e_m_1_1_energy_eq.js  class_slaughter_f_e_m_1_1_energy_eq__inherit__graph.map  class_slaughter_f_e_m_1_1_energy_eq__inherit__graph.md5  class_slaughter_f_e_m_1_1_eq_base-members.html  class_slaughter_f_e_m_1_1_eq_base.html  class_slaughter_f_e_m_1_1_eq_base.js  class_slaughter_f_e_m_1_1_eq_base__coll__graph.map  class_slaughter_f_e_m_1_1_eq_base__coll__graph.md5  class_slaughter_f_e_m_1_1_eq_boundary_base-members.html  class_slaughter_f_e_m_1_1_eq_boundary_base.html  class_slaughter_f_e_m_1_1_eq_boundary_base.js  class_slaughter_f_e_m_1_1_eq_boundary_base__inherit__graph.map  class_slaughter_f_e_m_1_1_eq_boundary_base__inherit__graph.md5  class_slaughter_f_e_m_1_1_eq_core-members.html  class_slaughter_f_e_m_1_1_eq_core.html  class_slaughter_f_e_m_1_1_eq_core.js  class_slaughter_f_e_m_1_1_eq_core__inherit__graph.map  class_slaughter_f_e_m_1_1_eq_core__inherit__graph.md5  class_slaughter_f_e_m_1_1_eq_data_base-members.html  class_slaughter_f_e_m_1_1_eq_data_base.html  class_slaughter_f_e_m_1_1_eq_data_base.js  class_slaughter_f_e_m_1_1_eq_data_base__coll__graph.map  class_slaughter_f_e_m_1_1_eq_data_base__coll__graph.md5  class_slaughter_f_e_m_1_1_eq_data_base__inherit__graph.map  class_slaughter_f_e_m_1_1_eq_data_base__inherit__graph.md5  (+377 more)
doc/images/: v2m_example3_table.txt  v2m_example_info_file.txt  v2m_optimization_table.txt
doc/matlab/: elem_length.html  energy.html  parameters.html  quad4.html  tau_1.html  thermodynamics.html
doc/search/: all_5f.js  all_62.js  all_63.js  all_65.js  all_66.js  all_67.js  all_68.js  all_69.js  all_6c.js  all_6d.js  all_6e.js  all_6f.js  all_70.js  all_71.js  all_72.js  all_73.js  all_74.js  all_75.js  all_76.js  classes_65.js  classes_66.js  classes_68.js  classes_6d.js  classes_6f.js  classes_70.js  classes_75.js  classes_76.js  files_63.js  files_65.js  files_66.js  files_68.js  files_69.js  files_6d.js  files_75.js  files_76.js  functions_61.js  functions_63.js  functions_64.js  functions_65.js  functions_66.js  (+34 more)
images/: randvol_30.tif
include/common/: include.h
include/common/file_parts/: file_parts.h
include/common/user_options/: user_options.h
include/fem/: include.h
include/fem/common/: boundary_base.h  equation_base.h  explicit_system_base.h  implicit_system_base.h  include.h  init_func_base.h  my_analytic_function.h  my_dense_matrix.h  my_mesh.h  my_vtkio.h  system_base.h
include/fem/heat_eq/: heat_eq.h  heat_eq_boundary.h  heat_eq_system.h  include.h
include/fem/volume_average/: concentration_system.h  energy_system.h  front_velocity_eq.h  front_velocity_system.h  include.h  level_set_eq.h  level_set_system.h  momentum_system.h  thermo_system.h
include/vol2mesh/: Complex_3_subdomain_in_triangulation_3_to_vtk.h  include.h  vol2mesh.h  vol2mesh_mesh_criteria.h
matlab/: pub.m
matlab/fem/: example2.m  example2_test.m
matlab/fem/volume_average/: dt_dh.m  elem_length.m  energy.m  parameters.m  quad4.m  tau_1.m  temp_to_enthalpy.m  test_thermo.m  thermodynamics.m
matlab/v2m/: randvol.m  readtif.m  saveinr.m  savetif.m  showvol.m  tif2inr.m
source/: test_libmesh.cpp
source/common/: CMakeLists.txt
source/common/file_parts/: file_parts.cpp  test_file_parts.cpp
source/common/user_options/: test_user_options.cpp  user_options.cpp
source/fem/: CMakeLists.txt
source/fem/common/: CMakeLists.txt  boundary_base.cpp  equation_base.cpp  explicit_system_base.cpp  implicit_system_base.cpp  init_func_base.cpp  my_analytic_function.cpp  my_dense_matrix.cpp  my_mesh.cpp  my_vtkio.cpp  system_base.cpp
source/fem/examples/: CMakeLists.txt  example1.cpp  example2.cpp  example3.cpp  example3b.cpp  example3c.cpp  example4.cpp  example5.cpp  example6.cpp  test_eqdata.cpp  test_mymesh.cpp  test_thermo.cpp
source/fem/heat_eq/: CMakeLists.txt  heat_eq.cpp  heat_eq_boundary.cpp  heat_eq_system.cpp
source/fem/volume_average/: CMakeLists.txt  concentration_system.cpp  energy_system.cpp  front_velocity_eq.cpp  front_velocity_system.cpp  level_set_eq.cpp  level_set_system.cpp  momentum_system.cpp  thermo_system.cpp
source/vol2mesh/: CMakeLists.txt  v2m.cpp  vol2mesh.cpp  vol2mesh_mesh_criteria.cpp
